# QtMultiOS

./: CMakeLists.txt  README.md  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
